# gometro

./: .gitignore  Estratégias e Dicas de Mini Metro.md  Planejamento Clone Mini Metro Detalhado.md  README.md  evolution.md  go.mod  go.sum  justfile  main.go  main_test.go
cmd/rl_server/: main.go
components/: geometry.go  line.go  line_test.go  passenger.go  river.go  station.go  station_test.go  train.go  train_test.go
config/: config.go
docs/: evolving_reward_weights_plan.md
python/: constants.py  env.py  eval_suite.py  evaluate_model.py  evolve_rewards.py  export_onnx.py  http_schemas.py  infer.py  models.py  policy.py  pretrain.py  pyproject.toml  requirements.txt  test_conditional_mask.py  test_curriculum.py  test_env.py  test_eval_suite.py  test_evolve_rewards.py  test_frame_stack.py  test_integration.py  test_loop.py  test_model_observation.py  test_multidiscrete.py  test_reward_config.py  test_torch_cpu.py  test_train_config.py  train.py
python/rl/proto/: minimetro_pb2.py  minimetro_pb2_grpc.py
rendering/: game_renderer.go
rl/: actions.go  actions_test.go  client.go  client_test.go  env.go  env_test.go  grpc_service.go  obs.go  obs_test.go  server.go  server_test.go
rl/proto/: minimetro.pb.go  minimetro.proto  (+1 more)
state/: deepcopy.go  deepcopy_test.go  state.go
systems/: annealing.go  annealing_test.go  centrality.go  centrality_test.go  cost.go  cost_test.go  game.go  game_test.go  input.go  pathfinding.go  pathfinding_test.go  perturbations.go  simulation.go  simulation_test.go  solver.go  solver_test.go  spawning.go  ui.go  upgrades.go
(+4 files in other folders)
