[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "sb3-contrib>=2.8.0",
    "stable-baselines3>=2.8.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",
    "onnx>=1.16",
    "onnxruntime>=1.19",
    "onnxscript>=0.6.2",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
